# esp-agents-firmware

./: .gitignore  .gitlab-ci.yml  README.md
.github/tools/: boards_info.json  launchpad_base.toml
.github/workflows/: launchpad.yaml
components/agent/: CMakeLists.txt  Kconfig  README.md  idf_component.yml
components/agent_console/: CMakeLists.txt  README.md  idf_component.yml
components/audio/: CMakeLists.txt  Kconfig  README.md  audio_common.c  idf_component.yml
components/setup/: CMakeLists.txt  Kconfig.projbuild  README.md  idf_component.yml
docs/: agent_customisation.md  board_customisation.md  example_customisation.md  setup_guide.md
docs/firmwares/: generic_firmware.md  matter_controller.md
examples/common/assets/: CMakeLists.txt
examples/matter_controller/components/matter_controller/: CMakeLists.txt  Kconfig  idf_component.yml  linker.lf
examples/matter_controller/components/matter_controller/controller_rest_apis/: controller_rest_apis.c  matter_device.c
examples/matter_controller/components/matter_controller/controller_rest_apis/include/: controller_rest_apis.h  matter_device.h
examples/matter_controller/components/matter_controller/op_creds_issuer/: app_matter_controller_creds_issuer.cpp  app_matter_controller_creds_issuer.h
examples/matter_controller/components/matter_controller/rmaker_controller_service/: app_matter_controller.cpp  app_matter_controller.h  app_matter_controller_callback.cpp  app_matter_controller_callback.h  app_matter_device_manager.cpp  app_matter_device_manager.h  matter_controller_std.cpp  matter_controller_std.h
(+104 files in other folders)
